Keycloak/eks-deployment/kc-dev-headless-metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: kc-dev-metrics
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - port: 9000
      name: metrics
  clusterIP: None
  selector:
    app: keycloak
